--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p>SLING   is  focused   on modules  which  are</p>
 
-<p>a)  ERP  =&gt; DSTAR</p>
+<p>a)  ERP  =&gt; BSTAR</p>
 
 <p>b)  CRM =&gt; CSTAR</p>
 
