--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Sling</h1>
-      <h2 class="project-tagline">SLING    is powerful  Programming  Language invented    in  JDollar  by  wilmix jemin  j for  cloud  computing at  year  2016.</h2>
+      <h2 class="project-tagline">SLING    is powerful  Programming  Language invented    in  JDollar  by  wilmix jemin  j for  Terminal WebService at  year  2016.</h2>
       <a href="https://github.com/wilmix8/SLING" class="btn">View on GitHub</a>
       <a href="https://github.com/wilmix8/SLING/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wilmix8/SLING/tarball/master" class="btn">Download .tar.gz</a>
