--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Sling</h1>
-      <h2 class="project-tagline">SLING    is powerful  Programming  Language invented    in  JDollar  by  wilmix jemin  j for  Terminal WebService at  year  2016.</h2>
+      <h2 class="project-tagline">SLING    is powerful  Programming  Language invented    in  WEB  by  wilmix jemin  j for  Terminal WebService at  year  2016.</h2>
       <a href="https://github.com/wilmix8/SLING" class="btn">View on GitHub</a>
       <a href="https://github.com/wilmix8/SLING/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wilmix8/SLING/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,7 +22,7 @@
       <h1>
 <a id="-sling" class="anchor" href="#-sling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> SLING</h1>
 
-<p>SLING    is powerful  Programming Language invented    in  JDollar  by  wilmix jemin  j for  Remotewebappplication at  year  2016.</p>
+<p>SLING    is powerful  Programming Language invented    in  WEB  by  wilmix jemin  j for  Remotewebappplication at  year  2016.</p>
 
 <p>SLING   is  focused   on modules  which  are</p>
 
